Faculty details update

--- a/index.html
+++ b/index.html
@@ -1522,14 +1522,14 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-3">
+				<div class="col-md-4">
 					<div class="card card-profile card-plain">
 						<div class="card-header card-avatar">
 							<img class="img" src="./assets/img/faculties/prabina.jpg" />
 						</div>
 						<div class="card-body ">
 							<h4 class="card-title">Prof. Prabina Rajib</h4>
-							<h6 class="card-category text-muted">Dean & Professor</h6>
+							<h6 class="card-category text-muted">Professor</h6>
 						</div>
 						<div class="card-footer justify-content-center">
 							<a href="https://www.facebook.com/prabina.rajib.9" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
@@ -1537,7 +1537,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-3">
+				<div class="col-md-4">
 					<div class="card card-profile card-plain">
 						<div class="card-header card-avatar">
 							<img class="img" src="./assets/img/faculties/saini.jpg" />
@@ -1552,7 +1552,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-3">
+				<!--<div class="col-md-3">
 					<div class="card card-profile card-plain">
 						<div class="card-header card-avatar">
 							<img class="img" src="./assets/img/faculties/tutan.jpg" />
@@ -1566,8 +1566,8 @@
 							<a href="https://www.linkedin.com/in/dr-tutan-ahmed-43193518/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
 						</div>
 					</div>
-				</div>
-				<div class="col-md-3">
+				</div> -->
+				<div class="col-md-4">
 					<div class="card card-profile card-plain">
 						<div class="card-header card-avatar">
 							<img class="img" src="./assets/img/faculties/srinivas.jpg" />
