Events update : Modus operandi, synergy, quizzard, parisham, leader's challenge

--- a/index.html
+++ b/index.html
@@ -374,9 +374,8 @@
   			<div class="col-md-10 ml-auto mr-auto">
   				
   				<h2 class="title" align="center">Events</h2>
-  				<h3 align = "center"><b>COMING SOON!</b></h3>
+<!--  				<h3 align = "center"><b>COMING SOON!</b></h3> -->
   				<br>
-  				<!--
   				<ul class="nav nav-pills nav-pills-primary" role="tablist">
   					<li class="nav-item">
   						<a class="nav-link active" data-toggle="tab" href="#entrepreneurship" role="tablist" aria-expanded="true">
@@ -415,8 +414,9 @@
   					</li>
   				</ul>
   				<div class="tab-content tab-space">
-  					<div class="tab-pane active" id="entrepreneurship" aria-expanded="true">
-  						<div class="card card-plain card-blog">
+  					 <div class="tab-pane active" id="entrepreneurship" aria-expanded="true">
+  					 	<h3 align = "center"><b>COMING SOON!</b></h3>
+  						<!-- <div class="card card-plain card-blog">
   							<div class="row">
   								<div class="col-md-7">
   									<h3 class="card-title">
@@ -458,9 +458,33 @@
   								</div>
 
   							</div>
-  						</div>
+  						</div> -->
   					</div>
   					<div class="tab-pane" id="supplyChain" aria-expanded="false">
+  						<div class="card card-plain card-blog">
+  							<div class="row">
+  								<div class="col-md-7">
+  									<h3 class="card-title">
+  										<a href="#pablo">Modus Operandi</a>
+  									</h3>
+  									<h6 class="card-category text-info">ScOpe Club</h6>
+  									<p class="card-description" align="justify">
+  										The Supply Chain and Operations (ScOpe) Club of Vinod Gupta School of Management, IIT Kharagpur proudly presents the prestigious event of Purvodaya festival, Modus Operandi - The Supply Chain and Operations spectacle. A unique platform for students to taste the flavor of solving case studies related to core operations activities. Here is the chance to win exciting rewards by discovering your acumen on Supply chain and Operations, with challenging and invigorating rounds.
+
+  										<a href="https://d2c.pw/gnoePz" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
+  									</p>
+
+  								</div>
+  								<div class="col-md-5">
+  									<div class="card-header card-header-image">
+  										<img class="img img-raised" src="./assets/img/events/ScOpe_Modus Operandi21.png">
+  									</div>
+  								</div>
+  							</div>
+  						</div>
+  					</div>
+
+<!--  					<div class="tab-pane" id="supplyChain" aria-expanded="false">
   						<div class="card card-plain card-blog">
   							<div class="row">
   								<div class="col-md-7">
@@ -482,8 +506,32 @@
   								</div>
   							</div>
   						</div>
-  					</div>
+  					</div> -->
   					<div class="tab-pane" id="finance" aria-expanded="false">
+  						<div class="card card-plain card-blog">
+  							<div class="row">
+
+  								<div class="col-md-7">
+  									<h3 class="card-title">
+  										<a href="#pablo">Synergy – A Competition for Stock Market Enthusiasts</a>
+  									</h3>
+  									<h6 class="card-category text-info">Drishtee Capital</h6>
+  									<p class="card-description" align="justify">
+  										Drishtee Capital – A Student-run Investment Club of Vinod Gupta School of Management, IIT Kharagpur, proudly presents the challenging event of the Purvodaya festival, Synergy. It is a one of its kind platform where students can bring out the stock market enthusiast inside them and showcase their aptitude by solving real-time investment cases.
+  										<a href="https://d2c.pw/y9csm8" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
+  									</p>
+
+  								</div>
+  								<div class="col-md-5">
+  									<div class="card-header card-header-image">
+  										<a href="#events">
+  											<img class="img" style="height:450px" src="./assets/img/events/Drishtee Capital_Synergy21.jpeg">
+  										</a>
+  									</div>
+  								</div>
+  							</div>
+  						</div>
+<!--  					<div class="tab-pane" id="finance" aria-expanded="false">
   						<div class="card card-plain card-blog">
   							<div class="row">
 
@@ -528,11 +576,12 @@
 
   								</div>
   							</div>
-  						</div>
+  						</div> -->
 
   					</div>
   					<div class="tab-pane" id="consulting" aria-expanded="false">
-  						<div class="card card-plain card-blog">
+  						<h3 align = "center"><b>COMING SOON!</b></h3>
+  					<!--	<div class="card card-plain card-blog">
   							<div class="row">
 
   								<div class="col-md-7">
@@ -579,7 +628,7 @@
 
   								</div>
   							</div>
-  						</div>
+  						</div> -->
 
   					</div>
   					<div class="tab-pane" id="marketing" aria-expanded="false">
@@ -587,23 +636,24 @@
   							<div class="row">
   								<div class="col-md-7">
   									<h3 class="card-title">
-  										<a href="#pablo">Leader’s Challenge</a>
+  										<a href="#pablo">Leader’s Challenge - Rise of the Marketer </a>
   									</h3>
   									<h6 class="card-category text-info">MAD Club</h6>
   									<p class="card-description" align="justify">
-  										Leader’s Challenge is the Flagship event of the Marketing and Advertising Club of VGSoM, designed to test the budding leader within you. It shall test your acumen of marketing and your skill of solving real-world problems. Get into the shoes of a CXO and present a ground-breaking solution.
-  										<a href="https://d2c.pw/fO9gKY" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
+  										LEADER's CHALLENGE is a national level competition for developing innovative product lines for a market leader in a yet unexplored market segment. The event will be organized by MAD, the Marketing and Advertising Club of VGSoM, IIT Kharagpur. The objective of the event is to generate ideas about a new product for a market leader building on their strengths and brand values, and then accordingly make plans for brand positioning, risk analysis, feasibility and SWOT analysis, financial analysis and overall business and marketing strategy for it. The idea is to sensitize students to real life business situations and to develop their analytical and presentation skills. Through this competition we aspire to reach out to a wide network of Indian academic institutes with the aim to foster and nurture the budding minds.
+
+  										<a href="https://d2c.pw/2yL8ob" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
   									</p>
 
   								</div>
   								<div class="col-md-5">
   									<div class="card-header card-header-image">
-  										<img class="img img-raised" src="./assets/img/events/MAD_Leader_s Challenge-min.jpeg">
+  										<img class="img img-raised" src="./assets/img/events/MAD_Leader's challenge21.png">
   									</div>
   								</div>
   							</div>
   						</div>
-  						<div class="card card-plain card-blog">
+  					<!--	<div class="card card-plain card-blog">
   							<div class="row">
   								<div class="col-md-5">
   									<div class="card-header card-header-image">
@@ -626,7 +676,7 @@
 
   									</div>
   								</div>
-  							</div>
+  							</div>  -->
   						</div>
 
 
@@ -635,27 +685,26 @@
   								<div class="row">
   									<div class="col-md-7">
   										<h3 class="card-title">
-  											<a href="#pablo">SBI Youth for India presents Parishram</a>
+  											<a href="#pablo">Parishram</a>
   										</h3>
   										<h6 class="card-category text-info">Saamanjasya Club</h6>
   										<p class="card-description" align="justify">
-  											SBI Youth for India (SBI YFI) is an Indian rural fellowship program initiated, funded and managed by the State Bank of India (SBI) in partnership with reputed NGOs. The fellowship is an initiative to sensitize & provide avenues for the more privileged sections to become aware of ground realities and contribute through their personal efforts towards building strong cohesive communities.<br>
-  											Saamanjasya Club of VGSoM, IIT Kharagpur proudly presents a prestigious event during Purvodaya, Parishram. A unique platform for students to showcase their analytical skills by solving a real-life CSR problem.<br>
-  											"Parishram" is a live Social Empowerment Case Study Challenge, being held as a part of Purvodaya 2020 (Jan 31, 2020, to Feb 02, 2020) - our annual B-School fest - where we invite NGOs to provide the real-life issues faced by them in regular operations. This is further built into a Case Study and presented to the participants who need to work on solving the case and coming up with feasible solutions, providing a future course of action for the same. In this way, we get to learn about the challenges that NGOs are facing today, and the NGOs would get some valuable insights and solutions from the best minds of the country.<br>
-  											Come!! Be a part of this challenge, unlock the new avenues for an industry face-off in the field of Corporate Social Responsibility.
-  											<a href="https://d2c.pw/Wr5dei" target="_blank">
+  											Saamanjasya Club of Vinod Gupta School of Management, IIT Kharagpur proudly presents its prestigious event during Purvodaya, Parishram. A unique platform for students to showcase their analytical skills by solving a real-life CSR problem.<br>
+											"Parishram" is a live Social Empowerment Case Study Challenge, being held as a part of Purvodaya 2021- our annual B-School fest - where we invite NGOs to participate by giving inputs as to the major issues the NGOs are facing in today's time. This will be further built into a Case Study, which will then be given to the participants from reputed B-Schools who will be working on solving the case and coming up with feasible solutions and future course of action for the same. In this way, we get to learn about the challenges that NGOs are facing today, and the NGOs would get some insights from the best minds of the country.
+
+  											<a href="https://dare2compete.com/o/nfYOM4r" target="_blank">
   												<button class="btn btn-primary pull-right"> Register on D2C </button></a>
   											</p>
 
   										</div>
   										<div class="col-md-5">
   											<div class="card-header card-header-image">
-  												<img class="img img-raised" src="./assets/img/events/Saamanjasya_Parishram-min.png">
+  												<img class="img img-raised" src="./assets/img/events/Saamanjasya_Parishram21.jpeg">
   											</div>
   										</div>
   									</div>
   								</div>
-  								<div class="card card-plain card-blog">
+  								<!-- <div class="card card-plain card-blog">
   									<div class="row">
   										<div class="col-md-5">
   											<div class="card-header card-header-image">
@@ -677,13 +726,35 @@
   										</div>
 
   									</div>
-  								</div>
-  							</div>
+  								</div> -->
+  							</div> 
   							<div class="tab-pane" id="others" aria-expanded="false">
   								<div class="card card-plain card-blog">
   									<div class="row">
 
   										<div class="col-md-7">
+  											<h3 class="card-title">
+  												<a href="#pablo">Quizzard</a>
+  											</h3>
+  												<h6 class="card-category text-info">Quiz Club</h6>
+  											<p class="card-description" align="justify">
+  												“The beginning of knowledge is the discovery of something we do not understand.”- Frank Herbert<br>
+												We, a group of knowledge enthusiasts bitten by curiosity bug, a.k.a. the Quiz Club of Vinod Gupta School of Management, IIT Kharagpur proudly presents our flagship event of Purvodaya Festival – Quizzard – The Ultimate B-School Quiz. If you think you have what it takes, come, be part of this challenge!
+
+  												<a href="https://d2c.pw/CyYwIF" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
+  											</p>                    
+  										</div>
+  										<div class="col-md-5">
+  											<div class="card-header card-header-image">
+  												<a href="#events">
+  													<img class="img" style="height:270px" src="./assets/img/events/Quiz Club_Quizzard21.jpg">
+  												</a>
+  											</div>
+  										</div>
+  									</div>
+  								</div>
+
+  										<!--<div class="col-md-7">
   											<h3 class="card-title">
   												<a href="#pablo">A Day At IIT KHARAGPUR</a>
   											</h3>
@@ -779,8 +850,8 @@
 
   						</div>
   					</div>
-  				</div> -->
-  			</div>
+  				</div>
+  			</div> -->
   			<!--     *********    END BLOGS 1      *********      -->
   		</div>
   	</div>
