--- a/index.html
+++ b/index.html
@@ -580,7 +580,54 @@
 
   					</div>
   					<div class="tab-pane" id="consulting" aria-expanded="false">
-  						<h3 align = "center"><b>COMING SOON!</b></h3>
+  						<div class="card card-plain card-blog">
+  							<div class="row">
+
+  								<div class="col-md-7">
+  									<h3 class="card-title">
+  										<a href="#pablo"><strong> Sumantran</strong> - Hunt for the star consultant</a>
+  									</h3>
+  									<h6 class="card-category text-info">The Consulting Club</h6>
+  									<p class="card-description" align="justify">
+  										The Consulting Club of Vinod Gupta School of Management, IIT Kharagpur is excited to present its annual event of the Purvodaya festival, Sumantran - A hunt for the star consultant. Here’s your chance to compete with the best minds across the nation. Put on your consultant's hats and make your way through quizzes, cases, presentations, and challenging questions to emerge as the star consultant. Spread across three rounds, the contest will challenge you with a comprehensive case that will test your analytical skills and business acumen to dive deep into the critical business problem and solve it in a structured way to deliver effective and implementable solutions.
+
+  										<a href=" https://dare2compete.com/o/jUcwGWV" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
+  									</p>
+
+  								</div>
+  								<div class="col-md-5">
+  									<div class="card-header card-header-image">
+  										<a href="#events">
+  											<img class="img" src="./assets/img/events/TCC_SUMANTRAN21.png">
+  										</a>
+  									</div>
+  								</div>
+  							</div>
+  						</div>
+
+  						<div class="card card-plain card-blog">
+  							<div class="row">
+  								<div class="col-md-5">
+  									<div class="card-header card-header-image">
+  										<a href="#events">
+  											<img class="img" src="./assets/img/events/TCC_Guesstimate21.png">
+  										</a>
+  									</div>
+  								</div>
+  								<div class="col-md-7">
+  									<h3 class="card-title">
+  										<a href="#pablo">Guesstimates – What gets measured, gets managed</a>
+  									</h3>
+  									<h6 class="card-category text-info">Consulting Club</h6>
+  									<p class="card-description" align="justify">
+  										The Consulting Club (TCC) of Vinod Gupta School of Management, IIT Kharagpur proudly presents one of the most prestigious events of Purvodaya festival, Guesstimates – What gets measured, gets managed. Consultants all over the world are required to guesstimate on a daily basis to propose the best possible solution for the clients’ requirements. Here is a chance to win exciting prizes by discovering your acumen on Guesstimates through challenging and invigorating rounds.	
+
+  										<a href=" https://d2c.pw/1DcaI7" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
+  									</p>
+
+  								</div>
+  							</div>
+  						</div>
   					<!--	<div class="card card-plain card-blog">
   							<div class="row">
 
