--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
   									<h3 class="card-title">
   										<a href="#pablo">Guesstimates – What gets measured, gets managed</a>
   									</h3>
-  									<h6 class="card-category text-info">Consulting Club</h6>
+  									<h6 class="card-category text-info"> The Consulting Club</h6>
   									<p class="card-description" align="justify">
   										The Consulting Club (TCC) of Vinod Gupta School of Management, IIT Kharagpur proudly presents one of the most prestigious events of Purvodaya festival, Guesstimates – What gets measured, gets managed. Consultants all over the world are required to guesstimate on a daily basis to propose the best possible solution for the clients’ requirements. Here is a chance to win exciting prizes by discovering your acumen on Guesstimates through challenging and invigorating rounds.	
 
