--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
   								<div class="row">
   									<div class="col-md-7">
   										<h3 class="card-title">
-  											<a href="#pablo">Parishram</a>
+  											<a href="#pablo">Parishram - Social Empowerment Case Study Challenge</a>
   										</h3>
   										<h6 class="card-category text-info">Saamanjasya Club</h6>
   										<p class="card-description" align="justify">
