Vichaar, Srijan, Mulyankan, Aalekh, Masthead compressed pic

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-6">
-								<img width=auto height=300px type="image/png" src="./assets/img/purvodaya/purvodaya-21-masthead-white.png"> 
+								<img width=auto height=300px type="image/png" src="./assets/img/purvodaya/purvodaya-21-masthead-white-min.png"> 
             <!--
                 <h4 style="font-family:pristina;">
                 	<img width=auto height=60px type="image/png" src="./assets/img/purvodaya/IOCL-logo.png">
@@ -415,7 +415,49 @@
   				</ul>
   				<div class="tab-content tab-space">
   					 <div class="tab-pane active" id="entrepreneurship" aria-expanded="true">
-  					 	<h3 align = "center"><b>COMING SOON!</b></h3>
+  						<div class="card card-plain card-blog">
+  							<div class="row">
+  								<div class="col-md-7">
+  									<h3 class="card-title">
+  										<a href="#pablo">Srijan - Present your Brainchild</a>
+  									</h3>
+  									<h6 class="card-category text-info">Entrepreneurship Cell</h6>
+  									<p class="card-description" align="justify">
+  										Promoting the spirit of Innovation and Entrepreneurship amongst the students of B-schools across the country is the objective of Srijan – Present your Brainchild. This will provide a unique opportunity for budding entrepreneurs to pitch their business ideas with venture capitalists and investors.<br>
+										Srijan is a business plan competition that will enable you to take your ideas to the next level. The viability of your ideas shall be judged, mentors will guide you to improve upon your business plans and you will have a chance to showcase your ideas and B-plans in front of B-Plan experts.
+
+  										<a href="https://d2c.pw/NO5HF8" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
+  									</p>
+
+  								</div>
+  								<div class="col-md-5">
+  									<div class="card-header card-header-image">
+  										<img class="img img-raised" src="./assets/img/events/E-Cell_Srijan21.png">
+  									</div>
+  								</div>
+  							</div>
+  						</div>
+  						<div class="card card-plain card-blog">
+  							<div class="row">
+  								<div class="col-md-5">
+  									<div class="card-header card-header-image">
+  										<img class="img img-raised" src="./assets/img/events/E-Cell_Vichaar21.png">
+  									</div>
+  								</div>
+  								<div class="col-md-7">
+  									<h3 class="card-title">
+  										<a href="#pablo">Vichaar – Business Learning Redefined</a>
+  									</h3>
+  									<h6 class="card-category text-info">Entrepreneurship Cell</h6>
+  									<p class="card-description" align="justify">
+  										The Entrepreneurship Cell (E-Cell) of Vinod Gupta School of Management, IIT Kharagpur proudly presents the prestigious event of Purvodaya festival, Vichaar – Business Learning Redefined. Vichaar provides a unique opportunity for budding entrepreneurs to apply their strategic skills in solving real-time business problems faced by various Startups.
+  										<a href="https://d2c.pw/3GTboN" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
+  									</p>
+
+  								</div>
+
+  							</div>
+  						</div>
   						<!-- <div class="card card-plain card-blog">
   							<div class="row">
   								<div class="col-md-7">
@@ -465,7 +507,7 @@
   							<div class="row">
   								<div class="col-md-7">
   									<h3 class="card-title">
-  										<a href="#pablo">Modus Operandi</a>
+  										<a href="#pablo">Modus Operandi - The Supply Chain and Operations Competition</a>
   									</h3>
   									<h6 class="card-category text-info">ScOpe Club</h6>
   									<p class="card-description" align="justify">
@@ -528,6 +570,28 @@
   											<img class="img" style="height:450px" src="./assets/img/events/Drishtee Capital_Synergy21.jpeg">
   										</a>
   									</div>
+  								</div>
+  							</div>
+  						</div>
+  						<div class="card card-plain card-blog">
+  							<div class="row">
+  								<div class="col-md-5">
+  									<div class="card-header card-header-image">
+  										<a href="#events">
+  											<img class="img" src="./assets/img/events/Finterest_Mulyankan21.png">
+  										</a>
+  									</div>
+  								</div>
+  								<div class="col-md-7">
+  									<h3 class="card-title">
+  										<a href="#pablo">Mulyankan</a>
+  									</h3>
+  									<h6 class="card-category text-info">Finterest Club</h6>
+  									<p class="card-description" align="justify">
+  										The Finterest Club of Vinod Gupta School of Management, IIT Kharagpur proudly presents the prestigious event of Purvodaya festival, 'Mulyankan', a National Level Financial Valuation competition. It is a unique platform for students to showcase their Financial acumen. The 3 rounds of the contest will touch upon your various skills, test your knowledge to the limits and provide a fabulous chance to win exciting rewards.
+  										<a href="https://d2c.pw/olwrvo" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
+  									</p>
+
   								</div>
   							</div>
   						</div>
@@ -749,6 +813,29 @@
   												<img class="img img-raised" src="./assets/img/events/Saamanjasya_Parishram21.jpeg">
   											</div>
   										</div>
+  									</div>
+  								</div>
+  								<div class="card card-plain card-blog">
+  									<div class="row">
+  										<div class="col-md-5">
+  											<div class="card-header card-header-image">
+  												<img class="img img-raised" src="./assets/img/events/Saamanjasya_Aalekh21.jpeg">
+  											</div>
+  										</div>
+  										<div class="col-md-7">
+  											<h3 class="card-title">
+  												<a href="#pablo">Aalekh - The Article Writing Competition</a>
+  											</h3>
+  											<h6 class="card-category text-info">Saamanjasya Club</h6>
+  											<p class="card-description" align="justify">
+  												Saamanjasya – The CSR club of VGSoM, IIT Kharagpur presents an opportunity to do some mind scribbling and pen down your thoughts for the article writing competition.<br>
+												A topic on a social issue will be provided to the registered candidates. The most practical, relevant, optimal, easy to implement and appealing solutions will be rewarded. Though English vocabulary alone is not the only criteria but the thought process and the structure of the article to be preferable maintained.
+
+  												<a href="https://d2c.pw/9wIUzm" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
+  											</p>
+
+  										</div>
+
   									</div>
   								</div>
   								<!-- <div class="card card-plain card-blog">
