--- a/index.html
+++ b/index.html
@@ -764,6 +764,30 @@
   								</div>
   							</div>
   						</div>
+  						<div class="card card-plain card-blog">
+  							<div class="row">
+  								<div class="col-md-5">
+  									<div class="card-header card-header-image">
+  										<a href="#events">
+  											<img class="img" src="./assets/img/events/MAD_Think Vent21.jpg">
+  										</a>
+  									</div>
+  								</div>
+  								<div class="col-md-7">
+  									<h3 class="card-title">
+  										<a href="#pablo">Think Vent</a>
+  									</h3>
+  									<h6 class="card-category text-info">MAD Club</h6>
+  									<p class="card-description" align="justify">
+  										Think Vent is a fun and engaging event organised by the Marketing and Advertising Club of VGSoM, designed to test the innovation, creativity and brand awareness of the participants. The competition will offer a chance to explore the challenges faced by a brand manager or product marketer in the present era.
+
+  										<a href="https://d2c.pw/HH2tlt" target="_blank"> 
+  											<button class="btn btn-primary pull-right"> Register on D2C </button></a>
+  										</p>
+
+  									</div>
+  								</div>
+  							</div>
   					<!--	<div class="card card-plain card-blog">
   							<div class="row">
   								<div class="col-md-5">
