--- a/index.html
+++ b/index.html
@@ -905,8 +905,52 @@
   										<div class="col-md-5">
   											<div class="card-header card-header-image">
   												<a href="#events">
-  													<img class="img" style="height:270px" src="./assets/img/events/Quiz Club_Quizzard21.jpg">
+  													<img class="img" src="./assets/img/events/Quiz Club_Quizzard21.jpg">
   												</a>
+  											</div>
+  										</div>
+  									</div>
+  								</div>
+  								<div class="card card-plain card-blog">
+  									<div class="row">
+  										<div class="col-md-5">
+  											<div class="card-header card-header-image">
+  												<a href="#events">
+  													<img class="img" src="./assets/img/events/Flash_Lights! Camera! Shutter!21.png">
+  												</a>
+  											</div>
+  										</div>
+  										<div class="col-md-7">
+  											<h3 class="card-title">
+  												<a href="#pablo">Lights! Camera! Shutter!</a>
+  											</h3>
+  											<h6 class="card-category text-info">Flash</h6>
+  											<p class="card-description" align="justify">
+  												“Life is unpredictable, and I feel, to some extent, lightning and cinematography should be a reflection of that” – Rachael Morrison. Everything in today’s world is going fast and we tend to forget to enjoy the little moments in our life. So let’s just slow down a bit and see the outer world in a new perspective. This “Slow Motion Challenge” expects you to freeze a short slow motion video clip with a maximum duration of one minute. There is no limit on using your creativity and film making skills, so go ahead and surprise us with your entries.
+
+  												<a href="https://d2c.pw/fn8u9e" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
+  											</p>
+
+  										</div>
+  									</div>
+  								</div>
+  								<div class="card card-plain card-blog">
+  									<div class="row">
+  										<div class="col-md-7">
+  											<h3 class="card-title">
+  												<a href="#pablo">Destello</a>
+  											</h3>
+  											<h6 class="card-category text-info">Flash</h6>
+  											<p class="card-description" align="justify">
+  												 “The camera is an instrument that teaches people how to see without a camera.” - Dorothea Lange. VGSoM Flash, calling all photography enthusiasts! Send us a moment that you want to keep from running away and show us what you failed to put in words. And remember, you don’t take a photograph, you make it!
+
+  												<a href="https://d2c.pw/HIhgfo" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
+  											</p>
+
+  										</div>
+  										<div class="col-md-5">
+  											<div class="card-header card-header-image">
+  												<img class="img img-raised" style="height:400px" src="./assets/img/events/Flash_Destello21.jpg">
   											</div>
   										</div>
   									</div>
