Update | Update poster for Drishtee Capital

--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
   								<div class="col-md-5">
   									<div class="card-header card-header-image">
   										<a href="#events">
-  											<img class="img" style="height:450px" src="./assets/img/events/Drishtee Capital_Synergy21.jpeg">
+  											<img class="img" style="height:450px" src="./assets/img/events/Drishtee Capital_Synergy21.jpg">
   										</a>
   									</div>
   								</div>
