--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@
   								<div class="col-md-5">
   									<div class="card-header card-header-image">
   										<a href="#events">
-  											<img class="img" src="./assets/img/events/MAD_Think Vent21.jpg">
+  											<img class="img" src="./assets/img/events/MAD_Think Vent21.png">
   										</a>
   									</div>
   								</div>
