corrected the error in gallery page

--- a/index.html
+++ b/index.html
@@ -355,6 +355,7 @@
   		<div class="carousel-item">
   			<img src="./assets/img/guests/rem.jpg" alt="" style="width: 100%;">
   		</div>
+  		-->
   	</div>
   	<a class="carousel-control-prev" href="#speakers" role="button" data-slide="prev">
   		<i class="material-icons">keyboard_arrow_left</i>
@@ -363,7 +364,7 @@
   	<a class="carousel-control-next" href="#speakers" role="button" data-slide="next">
   		<i class="material-icons">keyboard_arrow_right</i>
   		<span class="sr-only">Next</span>
-  	</a>-->
+  	</a>
   </div>
   <!-- End Carousel Card -->
 
@@ -1492,7 +1493,8 @@
 </div>
 
 </div>
-
+</div>
+</div>
 <div class="cd-section" id="gallery">
 	<!--     *********    GALLERY CAROUSEL     *********      -->
 	<div class="testimonials-2 section-dark">
@@ -1825,7 +1827,8 @@
 						</div>
 					</div>
 				</div>
-				<!--<div class="col-md-3">
+				<!--
+				<div class="col-md-3">
 					<div class="card card-profile card-plain">
 						<div class="card-header card-avatar">
 							<img class="img" src="./assets/img/faculties/tutan.jpg" />
@@ -1839,7 +1842,8 @@
 							<a href="https://www.linkedin.com/in/dr-tutan-ahmed-43193518/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
 						</div>
 					</div>
-				</div> -->
+				</div> 
+			-->
 				<div class="col-md-4">
 					<div class="card card-profile card-plain">
 						<div class="card-header card-avatar">
