Updated E-cell Srijan Poster, and made size of 2 logos better as requested | Aditya

--- a/index.html
+++ b/index.html
@@ -1197,11 +1197,11 @@
           			<a target="_blank" href="https://www.scnext.org/">
           				<div class="card card-profile">
           					<div >
-          						<br><img class="img" height=40px width=auto type="image/png" src="./assets/img/Sponsors/ISCEA - SCNext India SkillPRO.jpg" />
+          						<br><img class="img" height=40px width=140px type="image/png" src="./assets/img/Sponsors/ISCEA - SCNext India SkillPRO.jpg" />
           					</div>
           					<div class="card-body ">
           						<h6 class="card-title"><br>ISCEA - SCNext India SkillPRO</h6>
-          						<h6 class="card-category text-muted">Sponsor</h6>
+          						<h6 class="card-category text-muted">Knowledge Partner</h6>
           					</div>
           				</div>
           			</a>
