Mad Works logo change

--- a/index.html
+++ b/index.html
@@ -1251,7 +1251,7 @@
           			<a target="_blank" href="https://madworks.in/">
           				<div class="card card-profile">
           					<div >
-          						<br><img class="img" height=60px width=auto type="image/png" src="./assets/img/Sponsors/Logo MADWorks.jpg" />
+          						<br><img class="img" height=60px width=auto type="image/png" src="./assets/img/Sponsors/Logo MADWorks.png" />
           					</div>
           					<div class="card-body ">
           						<h6 class="card-title"><br>Mad Works</h6>
