--- a/index.html
+++ b/index.html
@@ -1149,6 +1149,25 @@
           				<div class="card card-profile">
           					<div >
           						<br>
+          						<img class="img" height=50px width=auto type="image/png" src="./assets/img/Sponsors/91.9 friends fm.png" />
+          					</div>
+          					<div class="card-body ">
+          						<h4 class="card-title">91.9 Friends FM </h4>
+          						<h6 class="card-category text-muted">Exclusive Radio partner</h6>
+          					</div>
+          				</div>
+          			</a>
+          		</div>
+          		
+          	</div>
+          	<div class="row">
+          		<div class="col-md-4">
+          		</div>
+          		<div class="col-md-4">
+          			<a target="_blank">
+          				<div class="card card-profile">
+          					<div >
+          						<br>
           						<img class="img" height=50px width=auto type="image/png" src="./assets/img/Sponsors/tech-club.jpeg" />
           					</div>
           					<div class="card-body ">
