--- a/index.html
+++ b/index.html
@@ -1074,25 +1074,6 @@
           	-->
 
           	<div class = "row">
-          		<div class ="col-md-4"></div>
-          		<div class="col-md-4">
-          			<a target="_blank" href="https://youthforindia.org/">
-          				<div class="card card-profile">
-          					<div >
-          						<br><img class="img" height=120px width=auto type="image/png" src="./assets/img/Sponsors/SBI Youth for India.jpeg" />
-          					</div>
-          					<div class="card-body ">
-          						<h6 class="card-title"><br>SBI Youth for India</h6>
-          						<h6 class="card-category text-muted">Silver Sponsor</h6>
-          					</div>
-          				</div>
-          			</a>
-          		</div>
-
-          	</div>	
-
-
-          	<div class="row">
           		<div class="col-md-4">
           			<a target="_blank" href="https://www.havishmconsulting.com/">
           				<div class="card card-profile">
@@ -1106,6 +1087,37 @@
           				</div>
           			</a>
           		</div>
+          		<div class="col-md-4">
+          			<a target="_blank" href="https://youthforindia.org/">
+          				<div class="card card-profile">
+          					<div >
+          						<br><img class="img" height=120px width=auto type="image/png" src="./assets/img/Sponsors/SBI Youth for India.jpeg" />
+          					</div>
+          					<div class="card-body ">
+          						<h6 class="card-title"><br>SBI Youth for India</h6>
+          						<h6 class="card-category text-muted">Silver Sponsor</h6>
+          					</div>
+          				</div>
+          			</a>
+          		</div>
+          		<div class="col-md-4">
+          			<a target="_blank" href="https://www.business-standard.com/">
+          				<div class="card card-profile">
+          					<div >
+          						<br><img class="img" height=50px width=auto type="image/png" src="./assets/img/Sponsors/business-std.png" />
+          					</div>
+          					<div class="card-body ">
+          						<h4 class="card-title">Business Standard</h4>
+          						<h6 class="card-category text-muted">Media Partner</h6>
+          					</div>
+          				</div>
+          			</a>
+          		</div>
+
+          	</div>	
+
+
+          	<div class="row">
           		<div class="col-md-4">
           			<a target="_blank" href="https://wharfstreetstudios.com/">
           				<div class="card card-profile">
@@ -1134,22 +1146,6 @@
           				</div>
           			</a>
           		</div>
-
-          	</div>
-          	<div class="row">
-          		<div class="col-md-4">
-          			<a target="_blank" href="https://www.business-standard.com/">
-          				<div class="card card-profile">
-          					<div >
-          						<br><img class="img" height=50px width=auto type="image/png" src="./assets/img/Sponsors/business-std.png" />
-          					</div>
-          					<div class="card-body ">
-          						<h4 class="card-title">Business Standard</h4>
-          						<h6 class="card-category text-muted">Media Partner</h6>
-          					</div>
-          				</div>
-          			</a>
-          		</div>
           		<div class="col-md-4">
           			<a target="_blank" href="http://teeshood.com/">
           				<div class="card card-profile">
@@ -1160,6 +1156,23 @@
           					<div class="card-body ">
           						<h4 class="card-title">Teeshood</h4>
           						<h6 class="card-category text-muted">Merchandise partner</h6>
+          					</div>
+          				</div>
+          			</a>
+          		</div>
+
+          	</div>
+          	<div class="row">
+          		<div class="col-md-4">
+          			<a target="_blank">
+          				<div class="card card-profile">
+          					<div >
+          						<br>
+          						<img class="img" height=50px width=auto type="image/png" src="./assets/img/Sponsors/FriendsFM.png" />
+          					</div>
+          					<div class="card-body ">
+          						<h4 class="card-title">91.9 Friends FM</h4>
+          						<h6 class="card-category text-muted">Radio partner</h6>
           					</div>
           				</div>
           			</a>
