Changes | Radio Partner

--- a/index.html
+++ b/index.html
@@ -1074,6 +1074,25 @@
           	-->
 
           	<div class = "row">
+          		<div class ="col-md-4">
+          		</div>	
+          		<div class="col-md-4">
+          			<a target="_blank" href="https://youthforindia.org/">
+          				<div class="card card-profile">
+          					<div >
+          						<br><img class="img" height=120px width=auto type="image/png" src="./assets/img/Sponsors/SBI Youth for India.jpeg" />
+          					</div>
+          					<div class="card-body ">
+          						<h6 class="card-title"><br>SBI Youth for India</h6>
+          						<h6 class="card-category text-muted">Silver Sponsor</h6>
+          					</div>
+          				</div>
+          			</a>
+          		</div>
+          	</div>	
+
+
+          	<div class="row">
           		<div class="col-md-4">
           			<a target="_blank" href="https://www.havishmconsulting.com/">
           				<div class="card card-profile">
@@ -1088,19 +1107,6 @@
           			</a>
           		</div>
           		<div class="col-md-4">
-          			<a target="_blank" href="https://youthforindia.org/">
-          				<div class="card card-profile">
-          					<div >
-          						<br><img class="img" height=120px width=auto type="image/png" src="./assets/img/Sponsors/SBI Youth for India.jpeg" />
-          					</div>
-          					<div class="card-body ">
-          						<h6 class="card-title"><br>SBI Youth for India</h6>
-          						<h6 class="card-category text-muted">Silver Sponsor</h6>
-          					</div>
-          				</div>
-          			</a>
-          		</div>
-          		<div class="col-md-4">
           			<a target="_blank" href="https://www.business-standard.com/">
           				<div class="card card-profile">
           					<div >
@@ -1109,25 +1115,6 @@
           					<div class="card-body ">
           						<h4 class="card-title">Business Standard</h4>
           						<h6 class="card-category text-muted">Media Partner</h6>
-          					</div>
-          				</div>
-          			</a>
-          		</div>
-
-          	</div>	
-
-
-          	<div class="row">
-          		<div class="col-md-4">
-          			<a target="_blank" href="https://wharfstreetstudios.com/">
-          				<div class="card card-profile">
-          					<div >
-          						<br>
-          						<img class="img" height=50px width=auto type="image/png" src="./assets/img/Sponsors/Wharf Street Studios.png" />
-          					</div>
-          					<div class="card-body ">
-          						<h4 class="card-title">Wharf Street Studios</h4>
-          						<h6 class="card-category text-muted">Event Sponsor</h6>
           					</div>
           				</div>
           			</a>
@@ -1146,6 +1133,8 @@
           				</div>
           			</a>
           		</div>
+          	</div>
+          	<div class="row">
           		<div class="col-md-4">
           			<a target="_blank" href="http://teeshood.com/">
           				<div class="card card-profile">
@@ -1160,11 +1149,22 @@
           				</div>
           			</a>
           		</div>
-
-          	</div>
-          	<div class="row">
           		<div class="col-md-4">
-          			<a target="_blank">
+          			<a target="_blank" href="https://wharfstreetstudios.com/">
+          				<div class="card card-profile">
+          					<div >
+          						<br>
+          						<img class="img" height=50px width=auto type="image/png" src="./assets/img/Sponsors/Wharf Street Studios.png" />
+          					</div>
+          					<div class="card-body ">
+          						<h4 class="card-title">Wharf Street Studios</h4>
+          						<h6 class="card-category text-muted">Event Sponsor</h6>
+          					</div>
+          				</div>
+          			</a>
+          		</div>
+          		<div class="col-md-4">
+          			<a target="_blank" href="https://www.facebook.com/919FriendsFM/">
           				<div class="card card-profile">
           					<div >
           						<br>
@@ -1177,6 +1177,8 @@
           				</div>
           			</a>
           		</div>
+          	</div>
+          	<div class="row">
           		<div class="col-md-4">
           			<a target="_blank">
           				<div class="card card-profile">
