--- a/index.html
+++ b/index.html
@@ -330,32 +330,47 @@
       </div>
   -->
   <div id="speakers" class="carousel slide" data-ride="carousel">
-  	<h2 class="title" align="center">Speakers</h2>
+  	<h2 class="title" align="center">Speakers<br></h2>
   	<ol class="carousel-indicators">
   		<li data-target="#speakers" data-slide-to="0" class="active"></li>
-  		<!--<li data-target="#speakers" data-slide-to="1"></li>
+  		<li data-target="#speakers" data-slide-to="1"></li>
   		<li data-target="#speakers" data-slide-to="2"></li>
   		<li data-target="#speakers" data-slide-to="3"></li>
-  		<li data-target="#speakers" data-slide-to="4"></li>-->
+  		<li data-target="#speakers" data-slide-to="4"></li>
+  		<li data-target="#speakers" data-slide-to="5"></li>
+  		<li data-target="#speakers" data-slide-to="6"></li>
+  		<li data-target="#speakers" data-slide-to="7"></li>
+  		<li data-target="#speakers" data-slide-to="8"></li>
+  		<li data-target="#speakers" data-slide-to="9"></li>
   	</ol>
   	<div class="carousel-inner" align = "center">
   		<div class="carousel-item active">
-  			<img src="./assets/img/purvodaya/coming-soon.jpg" align="center" >
+  			<img src="./assets/img/guests/1.PNG" alt="" style="width: 40%;">
   		</div>
-<!--
-  		<div class="carousel-item">
-  			<img src="./assets/img/guests/Sangeeta-bahl.jpg" alt="" style="width: 100%;">
-  		</div>
-  		<div class="carousel-item">
-  			<img src="./assets/img/guests/pranav-bhanage.jpg" alt="" style="width: 100%;">
+		<div class="carousel-item">
+  			<img src="./assets/img/guests/2.PNG" alt="" style="width: 40%;">
   		</div>
   		<div class="carousel-item">
-  			<img src="./assets/img/guests/ls.jpg" alt="" style="width: 100%;">
+  			<img src="./assets/img/guests/3.PNG" alt="" style="width: 40%;">
   		</div>
   		<div class="carousel-item">
-  			<img src="./assets/img/guests/rem.jpg" alt="" style="width: 100%;">
+  			<img src="./assets/img/guests/4.PNG" alt="" style="width: 40%;">
   		</div>
-  	-->
+  		<div class="carousel-item">
+  			<img src="./assets/img/guests/5.png" alt="" style="width: 70%;">
+  		</div>
+  		<div class="carousel-item">
+  			<img src="./assets/img/guests/6.png" alt="" style="width: 70%;">
+  		</div>
+  		<div class="carousel-item">
+  			<img src="./assets/img/guests/7.png" alt="" style="width: 70%;">
+  		</div>
+  		<div class="carousel-item">
+  			<img src="./assets/img/guests/8.jpg" alt="" style="width: 70%;">
+  		</div>
+  		<div class="carousel-item">
+  			<img src="./assets/img/guests/9.PNG" alt="" style="width: 70%;">
+  		</div>
   </div>
   <a class="carousel-control-prev" href="#speakers" role="button" data-slide="prev">
   	<i class="material-icons">keyboard_arrow_left</i>
